# shelf

./: .gitattributes  .gitignore  .gitleaks.toml  .impeccable.md  BLUEPRINT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  EXEC_BRIEF.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TODO-fix-shelf-performance.md  deny.toml  llms-full.txt  llms.txt  rust-toolchain.toml
benchmarks/correctness-diff/: Makefile  README.md  config.example.yaml  pyproject.toml
benchmarks/correctness-diff/k8s/: cronjob.example.yaml
benchmarks/correctness-diff/queries/: 01-count-recent.sql.tmpl  02-group-by-user.sql.tmpl  03-join-two-tables.sql.tmpl  04-large-scan-limit.sql.tmpl  05-predicate-pushdown.sql.tmpl
benchmarks/correctness-diff/src/correctness_diff/: __init__.py  cli.py  runner.py
benchmarks/correctness-diff/tests/: test_runner.py
benchmarks/trino_logs/: .gitignore  Makefile  README.md  pyproject.toml
benchmarks/trino_logs/docs/: SHELF-26a-predicate-extraction.md
benchmarks/trino_logs/fixtures/synthetic-7d/: expected.json  generate.py  sim-configs.json  trace.jsonl
benchmarks/trino_logs/src/shelf_replay/: __init__.py  aggregate.py  cli.py  key.py  manifest.py  predicates.py  prewarm.py  report.py  scanner.py  simulate.py  trace.py  types.py
benchmarks/trino_logs/tests/: conftest.py  test_key.py  test_pipeline.py  test_simulate.py  test_trace.py
clients/python/trainer/: README.md  pyproject.toml
clients/python/trainer/docs/: README.md  labels.md  runbook.md
clients/python/trainer/tests/: test_cli.py  test_config.py  test_drift.py  test_evaluation.py  test_features.py  (+5 more)
crates/shelf-cost/: Cargo.toml  README.md
crates/shelf-cost/benches/: dollars_saved_atomic_add.rs
crates/shelf-cost/src/: coefficients.rs  config.rs  lib.rs
crates/shelf-cost/tests/: property.rs
crates/shelf-result-cache/: Cargo.toml
crates/shelf-result-cache/src/: cache.rs  canonicalizer.rs  config.rs  lib.rs  main.rs  metrics.rs  proxy.rs  snapshot.rs
shelf-advisor/: Cargo.toml  README.md  config.example.yaml
shelf-advisor/docs/: recommenders.md
shelf-advisor/schema/: envelope.schema.json  optimize_recommendation.schema.json  pinlist_recommendation.schema.json  recommendation.schema.json
shelf-advisor/src/: config.rs  cost.rs  error.rs  lib.rs  main.rs  output.rs  runtime.rs
shelf-advisor/src/input/: event_listener.rs  manifest.rs  mod.rs  mv_pinning.rs  shelfd_stats.rs
shelf-advisor/src/recommenders/: bloom.rs  bloom_write.rs  mod.rs  mv.rs  optimize.rs  pin_list.rs
shelf-advisor/tests/: it_bloom_write.rs  it_mv_pinning.rs  it_mv_pinning_live.rs  it_recommend.rs  it_smoke.rs
shelf-advisor/tests/fixtures/: dry_run_input.json
shelf-advisor/tests/integration/: compose.advisor.yml
shelf-advisor/tests/snapshots/: dry_run_golden.json
shelfctl/: Cargo.toml
shelfctl/src/: bundle.rs  chaos.rs  install.rs  main.rs  pool_status.rs
shelfctl/tests/: smoke.rs
shelfd/: .dockerignore  Cargo.toml  Dockerfile  README.md
shelfd/benches/: hashring.rs  shim_profile.rs
shelfd/docs/: metrics.md
shelfd/docs/design-notes/: B1-rowgroup-zstd-compression.md  README.md  SHELF-07-head-and-stats.md  SHELF-08-observability.md  SHELF-09-dockerfile-and-helm-lint.md  SHELF-17-iceberg-manifest-pool.md  SHELF-18-nvme-hybrid-pool.md  SHELF-20-membership-and-drain.md  SHELF-21-shim-write-passthrough.md  SHELF-22-s3-compat-shim.md  SHELF-22-zero-downtime-restarts.md  SHELF-22a-unix-socket-mode.md  SHELF-23-24-admin-surface-and-pinlist.md  SHELF-23-peer-fetch-and-coherence.md  SHELF-24-s3-fallback-passthrough.md  SHELF-26-replay-harness.md  SHELF-27-observability-dashboard.md  SHELF-27a-per-replica-label.md  SHELF-40-dollars-saved-counter.md  SHELF-42-ab-query-tagging.md  SHELF-45-compaction-aware-rewarm.md  SHELF-46-bloom-aware-footer-admission.md  SHELF-47-mv-aware-pinning.md  SHELF-49-coalesced-range-get.md  SHELF-50-decoded-metadata-cache.md  SHELF-53-shelf-advisor.md  SHELF-D3-page-index-bloom.md  SHELF-E1-eviction-audit.md  SHELF-E2-zstd-metadata.md  SHELF-E6-peer-failover.md  SHELF-G2-side-blooms.md  SHELF-G3-sort-order-awareness.md  SHELF-G4-filter-service.md  SHELF-G6-text-index.md  SHELF-H5-mv-telemetry.md  SHELF-I1-subplan-caching.md  SHELF-I2-arrow-batch-cache.md  SHELF-I3-rl-prefetch.md  SHELF-TIER5-lightgbm-escape-hatch.md
shelfd/docs/runbooks/: 2026-04-preview-4-rollout.md  2026-04-preview-5-rollout.md  2026-04-preview-6-rollout.md  2026-04-preview-7-rollout.md  2026-04-preview-8-rollout.md  2026-04-rep1-revert-cdp-endpoint.md  2026-05-lodc-daily-ops-tuning.md  2026-05-zstd-cutover.md  SHELF-45-compaction-rewarm.md
shelfd/proto/: shelf_filter.proto
shelfd/src/: ab_tag.rs  admin_pin_payload.rs  admission.rs  admission_limiter.rs  admission_wtinylfu.rs  aws_chunked.rs  capacity_check.rs  coalesce.rs  compaction_rewarm.rs  compression.rs  config.rs  control.rs  coop_admission.rs  cost.rs  decoded_meta.rs  error.rs  filter_service.rs  fingerprint.rs  footer_overlay.rs  freshness.rs  head_lru.rs  http.rs  lib.rs  lodc_backpressure.rs  main.rs  membership.rs  metrics.rs  mv_registry.rs  origin.rs  parquet_admit.rs  parquet_meta.rs  peer.rs  peer_fetch.rs  pinlist.rs  plan_endpoint.rs  plan_warmer.rs  pod_load.rs  prefetch.rs  rewarm_poller.rs  router.rs  (+10 more)
shelfd/src/s3_shim/: xml.rs
shelfd/tests/: docker-compose.yml  it_ab_tag.rs  it_admin.rs  it_admin_pin_schema_flex.rs  it_bloom_admission.rs  it_cap_ready.rs  it_coalesce.rs  it_compaction_rewarm.rs  it_decoded_meta.rs  it_dollars_saved.rs  it_head_stats.rs  it_http2_negotiation.rs  it_hybrid_pool.rs  it_predicate_prune.rs  it_read_path.rs  it_s3_shim.rs  it_shim_write.rs  it_shim_write_v2.rs  it_traces.rs  it_ui.rs  smoke.rs
shelfd/tests/common/: mod.rs
shelfd/tests/fixtures/: hrw_golden_vectors.txt  shelf04_golden_vectors.txt
shelfd/ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
shelfd/ui/src/: App.tsx  format.ts  main.tsx  polling.tsx  shortcuts.tsx  styles.css  theme.tsx
(+567 files in other folders)
