[package]
name = "shelf-advisor"
description = "Trino-event-listener + Iceberg-manifest advisor that emits JSON recommendations (small-file OPTIMIZE targets, pin-list candidates; MV-aware pinning and bloom-write hints land in sibling tickets). Read-only; no auto-PR; downstream CI/CD applies the suggestions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "shelf-advisor"
path = "src/main.rs"

# `lib.rs` exposes the `Recommender` trait + `AnalysisContext` + the
# `Recommendation` types so SHELF-65 (MV-aware pinning) and SHELF-52
# (bloom-write advisor) can land their recommenders in-tree without
# shelling out to the binary, and so `tests/it_*.rs` can drive the
# pipeline in-process against fixture readers.
[lib]
name = "shelf_advisor"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# `reqwest` reads shelfd's `/stats` endpoint over HTTP. Same-cluster,
# no auth, default-features off (rustls-tls already pinned at the
# workspace level so we don't get OpenSSL on Linux).
reqwest = { workspace = true }
# `humantime-serde` only deserialises `Duration` from the YAML config —
# the CLI keeps its own tiny parser (see `parse_window`) so the
# `--window` flag stays free of dep churn.
humantime-serde = { workspace = true }

[dev-dependencies]
# `assert_cmd` drives the compiled `shelf-advisor` binary from the
# integration tests. `tempfile` gives them a writable workspace.
# Both already in the workspace dep graph; no transitive native deps.
assert_cmd = "2"
tempfile = "3"
serde_yaml = { workspace = true }
