[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf-replay"
version = "0.1.0"
description = "Offline analysis harness for your_query_log_table (SHELF-26)."
requires-python = ">=3.11"
dependencies = [
  "pyarrow>=15.0",
  "pyiceberg>=0.7",
  "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
shelf-replay = "shelf_replay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
