[package]
name = "shelf-result-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SQL result-cache proxy for Shelf (§7 from TODO-fix-shelf-performance.md)"
repository = "https://github.com/shelf-project/shelf"
keywords = ["trino", "cache", "iceberg", "result-cache"]
categories = ["database", "caching"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
http = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Arrow IPC for result serialization
# arrow = { version = "54", features = ["ipc"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.14"

# Utilities
anyhow = "1"
bytes = "1"
parking_lot = "0.12"
once_cell = "1"

# LRU cache
lru = "0.12"

# Hashing for plan canonicalization
sha2 = "0.10"
hex = "0.4"

# Duration parsing
humantime = "2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "shelf-result-cache"
path = "src/main.rs"
